Procedural Room Data created
- Level1 Created
- Room1 Created
- Separate Level created

--- a/MyProject/Config/DefaultEngine.ini
+++ b/MyProject/Config/DefaultEngine.ini
@@ -17,4 +17,5 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_ThirdPerson",NewGameName="/Script/MyProject")
 +ActiveClassRedirects=(OldClassName="TP_ThirdPersonGameMode",NewClassName="MyProjectGameMode")
 +ActiveClassRedirects=(OldClassName="TP_ThirdPersonCharacter",NewClassName="MyProjectCharacter")
+LevelScriptActorClassName=/Script/ProceduralDungeon.RoomLevel
 
