--- a/MyProject/MyProject.uproject
+++ b/MyProject/MyProject.uproject
@@ -15,5 +15,11 @@
 			"Name": "ProceduralDungeon",
 			"Enabled": true
 		}
+	],
+	"TargetPlatforms": [
+		"MacNoEditor",
+		"WindowsNoEditor",
+		"LinuxAArch64NoEditor",
+		"LinuxNoEditor"
 	]
 }
